Minor: Remove ngram from the indexes